# fasmga.old

./: LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  security_issue.yml
assets/: robots.txt
docs/: conf.py  index.rst
pages/: dashboard.html  error.html  index.html  nsfw.html  nsfw_password.html  password.html  settings.html  tos.html  updating.html
translations/: en.json  it.json
