[tool.poetry]
name = "FasmGA"
version = "4.0.0"
description = "Free, without ads and open source. Like everything should be."
authors = ["Fasm.ga <developers@fasm.ga>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
